# MIPT_TP_Homework

./: .gitignore  Actor.cpp  Actor.h  CMakeLists.txt  Client.cpp  Client.h  Doxyfile  Game.cpp  Game.h  README.md  Selection.cpp  Selection.h  cancer_units.cpp  cancer_units.h  concrete_factories.cpp  concrete_factories.h  forsen_units.cpp  forsen_units.h  main.cpp  unit.h  unit_factory.h
